fixed responsive bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,9 @@ body {
   text-align: center;
   margin: auto;
   padding: 50px 70px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-radius: 20px;
   background-color: rgba(70, 133, 185, 0.95);
-  min-width: 700px;
+  width: 90vw;
   height: auto;
   position: relative;
   top: 0;
@@ -67,13 +66,17 @@ body {
   list-style: none;
   display: flex;
   flex-flow: column;
+  justify-content: center;
+  padding: 0;
 }
 
 .book {
   font-size: 28px;
+  text-align: center;
   background-color: bisque;
-  margin: 0 2.5rem 1rem 0;
-  padding: 8px 6px;
+  margin-bottom: 1.5rem;
+  padding: 8px 20px 8px 20px;
+  width: auto;
   border-radius: 8px;
 }
 
@@ -84,4 +87,9 @@ body {
   height: auto;
   cursor: pointer;
   font-size: 1.3rem;
+}
+
+/* Media query for mobile */
+@media screen and (max-width = 768px) {
+
 }
